# fimod

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  Taskfile.yml  build.rs  cliff.toml  deny.toml  index.html  install.ps1  install.sh  mise.toml  mkdocs.yml  rust-toolchain.toml  search.json  sitemap.xml
.cargo/: config.toml
.config/: nextest.toml
.gitea/workflows/: ci.yml  docs.yml  release.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  prerelease.yml  release.yml
acknowledgements/: index.html
assets/Sketchnote/: index.html
cookbook/: index.html
docs/: acknowledgements.md  cookbook.md  index.md  mold-gallery.md
docs/assets/: Sketchnote.md
docs/examples/: csv.md  http.md  json.md  yaml.md
docs/guides/: ai-integration.md  authoring-molds.md  cli-reference.md  comparison.md  concepts.md  mold-scripting.md  quick-start.md  quick-tour.md
docs/reference/: built-ins.md  exit-codes.md  formats.md  mold-defaults.md  monty-engine.md
examples/: README.md  gl-code-quality.json  jq_filter.py  jq_map.py  skylos-report.json
examples/csv/: index.html
examples/http/: index.html
examples/json/: index.html
examples/yaml/: index.html
guides/ai-integration/: index.html
guides/authoring-molds/: index.html
guides/cli-reference/: index.html
guides/comparison/: index.html
guides/concepts/: index.html
guides/mold-scripting/: index.html
guides/quick-start/: index.html
guides/quick-tour/: index.html
mold-gallery/: index.html
molds/: README.md  catalog.toml
molds/anonymize_pii/: README.md  anonymize_pii.py
molds/badge_md/: README.md  badge_md.py
molds/bq_insert/: README.md  bq_insert.py
molds/bq_select/: README.md  bq_select.py
molds/csv_stats/: README.md  csv_stats.py
molds/csv_to_json_records/: README.md  csv_to_json_records.py
molds/dedup_by/: README.md  dedup_by.py
molds/deep_pluck/: README.md  deep_pluck.py
molds/download/: README.md  download.py
molds/env_to_dotenv/: README.md  env_to_dotenv.py
molds/filter_fields/: README.md  filter_fields.py
molds/flatten_nested/: README.md  flatten_nested.py
molds/gh_latest/: gh_latest.py
molds/git_changelog/: README.md  git_changelog.py
molds/group_count/: README.md  group_count.py
molds/jq_compat/: README.md  jq_compat.py
molds/json_schema_extract/: README.md  json_schema_extract.py
molds/log_parse/: README.md  log_parse.py
molds/markdown_toc/: README.md  markdown_toc.py
molds/pick_fields/: README.md  pick_fields.py
molds/poetry_migrate/: README.md  poetry_migrate.py
molds/rename_keys/: README.md  rename_keys.py
molds/skylos_to_gitlab/: skylos_to_gitlab.py
molds/sort_json_keys/: README.md  sort_json_keys.py
molds/split_tags/: README.md  split_tags.py
molds/validate_fields/: README.md  validate_fields.py
notes/: ARCHITECTURE.md  DESIGN_NOTES.md  ROADMAP.md  TODO.md  VISION.md  monty-v0.0.10.md  monty-v0.0.11.md  monty-v0.0.12.md  monty-v0.0.13.md  monty-v0.0.14.md  monty-v0.0.17.md  output-spread.md  prerelease.md  release-v0.3.0.md  release-v0.3.1.md  release-workflow.md  stream.md  tohl-spec.md
resources/vhs/: Dockerfile  (+2 more)
scripts/: local-prerelease.sh  prerelease-github.sh  prerelease-local.sh
src/: convert.rs  dotpath.rs  engine.rs  env_helpers.rs  exit_control.rs  format.rs  format_control.rs  gatekeeper.rs  hash.rs  http.rs  iter_helpers.rs  lib.rs  main.rs  mold.rs  msg.rs  paths.rs  pipeline.rs  regex.rs  registry.rs  sandbox.rs  serde_compat.rs  setup.rs  template.rs  test_runner.rs
tests/: cli.rs  molds_test.rs
(+128 files in other folders)
